cmake_minimum_required(VERSION 3.25 FATAL_ERROR)

project(renderer CXX C CUDA)

enable_language(CUDA)

file(GLOB_RECURSE SRC_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)

file(GLOB_RECURSE HEADER_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.h
)

file(GLOB_RECURSE CUDA_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cu
)

add_library(${PROJECT_NAME} SHARED ${SRC_FILES} ${HEADER_FILES})
target_include_directories(${PROJECT_NAME} PUBLIC ${RENDERER_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PRIVATE ${RENDERER_LINKED_LIBRARIES})
target_precompile_headers(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/renderer/core.h")
set_target_properties(${PROJECT_NAME} PROPERTIES 
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED YES
    UNITY_BUILD ON UNITY_BUILD_MODE BATCH UNITY_BUILD_BATCH_SIZE 16
    COMPILE_FLAGS ${CMAKE_CXX_FLAGS} ${CMAKE_VEC_FLAGS} ${CMAKE_OPENMP_FLAGS}
    OUTPUT_NAME ${PROJECT_NAME}
)

if(LAB_DEVICE STREQUAL "GPU")
    set(PROJECT_NAME_GPU "${PROJECT_NAME}_gpu")
    add_library(${PROJECT_NAME_GPU} SHARED ${CUDA_FILES} ${HEADER_FILES})
    target_include_directories(${PROJECT_NAME_GPU} PUBLIC ${RENDERER_INCLUDE_DIRS})
    target_link_libraries(${PROJECT_NAME_GPU} PRIVATE ${RENDERER_LINKED_LIBRARIES})
    target_precompile_headers(${PROJECT_NAME_GPU} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/renderer/cuda/core.cuh")
    set_target_properties(${PROJECT_NAME_GPU} PROPERTIES 
        CUDA_STANDARD 17
        CUDA_STANDARD_REQUIRED YES
        UNITY_BUILD ON UNITY_BUILD_MODE BATCH UNITY_BUILD_BATCH_SIZE 16
        COMPILE_FLAGS ${CMAKE_CUDA_FLAGS}
        OUTPUT_NAME ${PROJECT_NAME_GPU}
        CUDA_SEPARABLE_COMPILATION ON
    )
    #target_compile_options(${PROJECT_NAME_GPU} PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:${CMAKE_CUDA_FLAGS}>)
endif()