cmake_minimum_required(VERSION 3.19 FATAL_ERROR)

project(lab CXX C CUDA)

enable_language(CUDA)

file(GLOB_RECURSE SRC_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)

file(GLOB_RECURSE CUDA_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cu
)

file(GLOB_RECURSE HEADER_FILES
    ${LAB_INCLUDE_DIR}/*.h
)

include_directories(
  ${LAB_INCLUDE_DIRS}
  ${CMAKE_CURRENT_SOURCE_DIR}
)

add_library(${PROJECT_NAME} SHARED ${SRC_FILES} ${CUDA_FILES} ${HEADER_FILES})
target_include_directories(${PROJECT_NAME} PUBLIC ${LAB_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PRIVATE ${LAB_LINKED_LIBRARIES})
set_target_properties(${PROJECT_NAME} PROPERTIES 
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED YES
    COMPILE_FLAGS ${CMAKE_CXX_FLAGS} ${CMAKE_VEC_FLAGS} ${CMAKE_OPENMP_FLAGS}
    OUTPUT_NAME ${PROJECT_NAME}
    CUDA_SEPARABLE_COMPILATION ON
)

if(LAB_DEVICE STREQUAL "GPU")
    target_compile_options(${PROJECT_NAME} PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:${CMAKE_CUDA_FLAGS}>)
    target_compile_definitions(${PROJECT_NAME} PRIVATE LAB_GPU_BUILD)
endif()